[package]
name = "game-theory-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tictactoe"
path = "src/tictactoe.rs"

[[bin]]
name = "kuhn"
path = "src/kuhn.rs"

[[bin]]
name = "push-fold"
path = "src/push_fold.rs"

[dependencies]
hashbrown = { version = "0.14.5", features = ["rayon"] }
ndarray = { version = "0.16.0", features = ["rayon"] }
num_cpus = "1.16.0"
rayon = "1.10.0"
rust_poker = "0.1.14"
