[package]
name = "game-theory-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tictactoe"
path = "src/tictactoe.rs"

[[bin]]
name = "icm"
path = "src/icm.rs"

[[bin]]
name = "pushfold"
path = "src/pushfold.rs"

[[bin]]
name = "kuhn"
path = "src/kuhn.rs"

[dependencies]
clap = "4.5.20"
hashbrown = "0.15.1"
rayon = "1.10.0"
rust_poker = "0.1.14"
